# sonic-host-services

./: Cargo.toml  README.md  azure-pipelines.yml  code.py  dummy_test_file.txt  lgtm.yml  pytest.ini  setup.py  sonic-host-services-data.bmpcfgd.service
.github/: copilot-instructions.md
crates/procdockerstatsd-rs/: Cargo.toml
crates/procdockerstatsd-rs/src/: main.rs
crates/procdockerstatsd_rs/: Cargo.toml
crates/userd-rs/: Cargo.toml
crates/userd-rs/src/: commands.rs  error.rs  lib.rs  main.rs  system.rs  templates.rs  types.rs  user_manager.rs
data/: PR401_WITHDRAWN.txt  README.md
data/debian/: rules  sonic-host-services-data.aaastatsd.service  sonic-host-services-data.caclmgrd.service  sonic-host-services-data.console-monitor-dce.service  sonic-host-services-data.console-monitor-dte.service  sonic-host-services-data.console-monitor-proxy@.service  sonic-host-services-data.console-monitor-pty-bridge@.service  sonic-host-services-data.determine-reboot-cause.service  sonic-host-services-data.featured.service  sonic-host-services-data.featured.timer  sonic-host-services-data.gnoi-reboot.service  sonic-host-services-data.gnoi-shutdown.service  sonic-host-services-data.hostcfgd.service  sonic-host-services-data.ire-watchdog-syslog.service  sonic-host-services-data.ire-watchdog.service  sonic-host-services-data.procdockerstatsd.service  sonic-host-services-data.process-reboot-cause.service  sonic-host-services-data.process-reboot-cause.timer  sonic-host-services-data.userd.service
data/templates/: common-auth-faillock-authfail.j2  common-auth-faillock.j2  common-auth-sonic.j2  common-password.j2  faillock.conf.j2  ldap.conf.j2  limits.conf.j2  nslcd.conf.j2  pam_limits.j2  tacplus_nss.conf.j2
debian/: changelog  control  install  rules
doc/: gnoi-native-grpc-design.md
host_modules/: config_engine.py  debug_info.py  debug_service.py  disk_utilization.py  docker_service.py  file_service.py  gcu.py  glome.py  gnoi_os_mgmt.py  gnoi_reboot.py  gnoi_reset.py  gnsi_console.py  host_service.py  image_service.py  infra_host.py  install_sonic.py  reboot.py  showtech.py  ssh_mgmt.py  systemd_service.py  user_auth_mgmt.py  yang_validator.py
host_modules/gnoi/: __init__.py  client.py  common_pb2.py  common_pb2_grpc.py  system_pb2.py  system_pb2_grpc.py  types_pb2.py  types_pb2_grpc.py
os_mgmt/: gnoi_os_proto_defs.py
scripts/: aaastatsd  bmpcfgd  caclmgrd  caclmgrd-202205  caclmgrd-202305  check_platform.py  check_platform.sh  console-monitor  determine-reboot-cause  featured  gnoi-reboot-daemon  gnoi_shutdown_daemon.py  hostcfgd  http-server  ire_watchdog  ire_watchdog_syslog  ldap.py  procdockerstatsd  process-reboot-cause  sonic-host-server  tacacs_controller  update-fips-config  wait-for-sonic-core.sh
scripts/rs/: Cargo.toml  main.rs  otel.toml  rs.sh
scripts/rs/src/: config.rs  lib.rs  main.rs
tests/: aatest.py  abmpcfgd_test.py  bmpcfgd_test.py  check_platform_test.py  debug_info_test.py  determine-reboot-cause_test.py  glome_test.py  gnoi_reboot_test.py  gnoi_reset_test.py  gnoi_shutdown_daemon_test.py  gnsi_console_test.py  mock_connector.py  procdockerstatsd_test.py  process-reboot-cause_test.py  reboot_test.py  ssh_mgmt_test.py
tests/bmpcfgd/: bmpcfgd_test.py  mock_connector.py
tests/bmpcfgd/common/: mock_configdb.py
tests/caclmgrd/: caclmgrd_bfd_test.py  caclmgrd_bgp_loopback1_test.py  caclmgrd_chassis_midplane_test.py  caclmgrd_conntrack_test.py  caclmgrd_dash_ha_test.py  caclmgrd_default_rule_test.py  caclmgrd_dhcp_server_syslog_test.py  caclmgrd_dhcp_test.py  caclmgrd_external_client_acl_test.py  caclmgrd_feature_test.py  caclmgrd_frr_loopback_acl_test.py  caclmgrd_generate_allow_internal_docker_ip_traffic_test.py  caclmgrd_gil_ip_multiasic_test.py  caclmgrd_ip2me_test.py  caclmgrd_match_acl_test.py  caclmgrd_namespace_docker_ip_test.py  caclmgrd_preserved_input_rules_test.py  caclmgrd_redfish_acl_test.py  caclmgrd_scale_test.py  caclmgrd_soc_rules_test.py  caclmgrd_test.py  caclmgrd_vxlan_test.py  conftest.py  test_bfd_vectors.py  test_bgp_loopback1_vectors.py  test_chassis_midplane_vectors.py  test_dash_ha_vectors.py  test_default_rule_vectors.py  test_dhcp_server_syslog_vectors.py  test_dhcp_vectors.py  test_external_client_acl_vectors.py  test_frr_loopback_acl_vectors.py  test_gil_ip_multiasic_vectors.py  test_icmpv6_ct_rule_vectors.py  test_internal_docker_ip_traffic_vectors.py  test_ip2me_vectors.py  test_match_acl_vectors.py  test_redfish_acl_vectors.py  test_scale_vectors.py  test_soc_rules_vectors.py  (+1 more)
tests/common/: mock_bootloader.py  mock_configdb.py  mock_restart_waiter.py
tests/console_monitor/: __init__.py  console_monitor_test.py  test_vectors.py
tests/featured/: featured_test.py  test_vectors.py
tests/host_modules/: config_test.py  debug_service_test.py  docker_service_test.py  file_service_test.py  file_stat_test.py  file_test.py  gcu_test.py  gnoi_os_mgmt_test.py  image_service_test.py  install_sonic_test.py  reboot_test.py  showtech_test.py  systemd_service_test.py  yang_test.py
tests/hostcfgd/: conftest.py  hostcfgd_audit_test.py  hostcfgd_fips_test.py  hostcfgd_ldap_test.py  hostcfgd_logging_test.py  hostcfgd_passwh_test.py  hostcfgd_radius_test.py  hostcfgd_rsyslog_test.py  hostcfgd_ssh_server_test.py  hostcfgd_tacacs_test.py  hostcfgd_test.py  test_ldap_vectors.py  test_logging_vectors.py  test_passwh_vectors.py  test_radius_vectors.py  test_rsyslog_vectors.py  test_ssh_server_vectors.py  test_sshs_vectors.py  test_tacacs_vectors.py  test_vectors.py
tests/hostcfgd/sample_output/LDAP/: common-auth-sonic  ldap.conf  nslcd.conf  nsswitch.conf  nsswitch.conf.old
tests/hostcfgd/sample_output/LOCAL/: tacplus_nss.conf
tests/hostcfgd/sample_output/LOCAL_RADIUS/: common-auth-sonic
tests/hostcfgd/sample_output/RADIUS/: 10.10.10.3_1645.conf  (+4 more)
tests/mocks/: host_service.py
tests/proc/: cmdline
userd/: Makefile
userd/debian/: changelog  control  copyright  install  rules  sonic-host-userd.service
userd/src/: CMakeLists.txt  userd.cpp
utils/: platform_info.py  run_cmd.py  sonic_db_utils.py  sonic_debug_cmds.py
(+23 files in other folders)
